@@ -50,6 +50,7 @@ bool CEventClient::AllowCommand(const CUnit* unit, const Command& cmd, bool from
 bool CEventClient::AllowUnitCreation(const UnitDef* unitDef, const CUnit* builder, const BuildInfo* buildInfo) { return true; }
 bool CEventClient::AllowUnitTransfer(const CUnit* unit, int newTeam, bool capture) { return true; }
 bool CEventClient::AllowUnitBuildStep(const CUnit* builder, const CUnit* unit, float part) { return true; }
+bool CEventClient::AllowUnitTransport(const CUnit* transporter, const CUnit* transportee) { return true; }
 bool CEventClient::AllowFeatureCreation(const FeatureDef* featureDef, int allyTeamID, const float3& pos) { return true; }
 bool CEventClient::AllowFeatureBuildStep(const CUnit* builder, const CFeature* feature, float part) { return true; }
 bool CEventClient::AllowResourceLevel(int teamID, const string& type, float level) { return true; }
