@@ -41,6 +41,9 @@ Lua:
    them available in `Spring.MoveCtrl.SetMoveDef` but beware the perf cost.
  - new TextEditing(utf8, start, length) callin, which holds the IME editing composition (https://wiki.libsdl.org/Tutorials/TextInput)
  - new SDLSetTextInputRect(x, y, w, h), SDLStartTextInput() and SDLStopTextInput() functions for controlling IME input from Lua
+ - Add AllowUnitTransport callin. Called when the engine tests whether unit A can transport unit B. Returning true will let
+   the engine decide, returning false will force the engine to disallow transportation (for this specific call).
+
 
 AI:
  - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
